# html-image-comparer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yaml
examples/: basic.rs
src/: error.rs  lib.rs
tests/: should_get_full_score.rs
tests/common/: mod.rs
