[package]
name = "html-image-comparer"
version = "1.1.1"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/akagiyuu/html-image-comparer"
homepage = "https://github.com/akagiyuu/html-image-comparer"
description = """
A library designed for the backend of html, css competitive programming platforms
"""

[dependencies]
chromiumoxide = { version = "0.7.0", features = ["tokio-runtime"], default-features = false }
pixelmatch = "0.1.0"
thiserror = "2.0.12"

[dev-dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
tokio = { version = "1.44.2", features = ["full"] }
